fix image stretch issue on mobile, cleanup comments and console logs

--- a/src/app/home.module.scss
+++ b/src/app/home.module.scss
@@ -1,7 +1,6 @@
 .homeIntroImage {
   width: 300px;
   height: 300px;
-  // border-radius: 50%;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -10,9 +9,9 @@
   position: relative;
   z-index: 10;
 
-  img {
-    width: 130%;
-    max-width: 130%;
+  @media screen and (min-width: 1024px) {
+      width: 300px;
+      height: 300px;
   }
 }
 
@@ -31,9 +30,13 @@
 .homeImageStroke {
   position: absolute;
   top: 44px;
-  transform: scale(1.3) rotate(30deg);
+  transform: scale(1.0) rotate(30deg);
   max-width: 100%;
   z-index: -1;
+
+  @media screen and (min-width: 767px) {
+    transform: scale(1.3) rotate(30deg);
+  }
 }
 
 .socialLinks {
